@startuml tiket
skinparam classAttributeIconSize 0

class Main {
    + main(args: String[]): void
}

package controller {
    class AuthController {
        - userRepo: UserRepository
        - currentUser: User
        + AuthController(repo: UserRepository)
        + login(username: String, password: String): User
        + logout(): void
        + register(username: String, password: String, saldo: int, role: String): boolean
        + getCurrentUser(): User
        + topUp(jml: int): boolean
    }

    class BookingController {
        - tiketRepo: TiketRepository
        + BookingController(repo: TiketRepository)
        + isSeatAvailable(schedule: Schedule, seat: String): boolean
        + pesanTiket(customer: Customer, schedule: Schedule, seat: String, harga: int): boolean
        + getTiketByUsername(username: String): List<Tiket>
        + hitungKursiTersedia(sch: Schedule): integer
    }

    class ScheduleController {
        - schRepo: ScheduleRepository
        + ScheduleController(repo: ScheduleRepository)
        + addSchedule(mv: Movie, std: Studio, jamTayang: String): boolean
        + getAllSchedules(): List<Schedule>
        + getAllStudios(): List<Studio>
    }

    class MovieController {
        - movieRepo: MovieRepository
        + MovieController(repo: MovieRepository)
        + addFilm(namaFilm: String, durasi: int, genre: String): boolean
        + deleteFilm(namaFilm: String): boolean
        + filterByGenre(genre: String): List<Movie>
        + getMovieByName(name: String): Movie
    }
}

package repository {
    class UserRepository {
        - users: List<User>
        + findByUsername(username: String): User
        + addUser(user: User): void
        + getAllUsers(): List<User>
    }

    class TiketRepository {
        - tikets: List<Tiket>
        + addTiket(tiket: Tiket): void
        + findTiket(dataTiket: String): Tiket
        + getAllTiket(): List<Tiket>
        + findByUsername(username: String): List<Tiket>
    }

    class ScheduleRepository {
        - schedules: List<Schedule>
        - studios: List<Studio>
        + addSchedule(sch: Schedule): void
        + getAllSchedule(): List<Schedule>
        + getAllStudios(): List<Studio>
    }

    class MovieRepository {
        - movieList: List<Movie>
        + findMovie(namaFilm: String): Movie
        + getAllMovies(): List<Movie>
        + addFilm(mv: Movie): void
        + deleteFilm(mv: Movie): void
    }
}

package model {
    abstract class User {
        - username: String
        - password: String
        - saldo: int
        + getRole(): String
        + getUsername(): String
        + getPassword(): String
        + getSaldo(): int
        + setSaldo(saldo: int): void
        + addSaldo(jml: int): void
    }

    class Admin {
        + Admin(username: String, password: String, saldo: int)
        + getRole(): String
    }

    class Customer {
        + Customer(username: String, password: String, saldo: int)
        + getRole(): String
    }

    class Tiket {
        - tiketId: int
        - user: User
        - jadwalFilm: Schedule
        - seat: String
        - harga: int
        + Tiket(tiketId: int, user: User, jadwalFilm: Schedule, seat: String, harga: int)
        + getTiketId(): int
        + getUser(): User
        + getJadwalFilm(): Schedule
        + getSeat(): String
        + getHarga(): int
    }

    class Schedule {
        - scheduleId: int
        - movie: Movie
        - studio: Studio
        - jamTayang: String
        + Schedule(id: int, mv: Movie, std: Studio, jam: String)
        + getScheduleId(): int
        + getMovie(): Movie
        + getStudio(): Studio
        + getJamTayang(): String
    }

    class Studio {
        - studioId: int
        - namaStudio: String
        - kapasitas: int
        - tipeStudio: String
        + Studio(id: int, nama: String, kap: int, tipe: String)
        + getStudioId(): int
        + getNamaStudio(): String
    }

    class Movie {
        - id: int
        - namaFilm: String
        - durasi: int
        - genre: String
        + Movie(id: int, nama: String, durasi: int, genre: String)
        + getNamaFilm(): String
        + getGenre(): String
    }
}

Main --> AuthController
Main --> MovieController
Main --> ScheduleController
Main --> BookingController

AuthController --> UserRepository
BookingController --> TiketRepository
ScheduleController --> ScheduleRepository
MovieController --> MovieRepository

UserRepository o-- User
TiketRepository o-- Tiket
ScheduleRepository o-- Schedule
ScheduleRepository o-- Studio
MovieRepository o-- Movie

User <|-- Admin
User <|-- Customer

Tiket --> User
Tiket --> Schedule
Schedule --> Movie
Schedule --> Studio

@enduml